<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/archiveFilterChannelContent"
    >
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:rowCount="2"
        android:columnCount="6"

        >
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:layout_columnWeight="1"
                android:id="@+id/btnArchiveFilterChannerNStore"
                android:drawableTop="@drawable/naver"
                android:text="@string/archiveFilterChannerNStore"
                android:layout_row="0"
                android:layout_column="0"
                />
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:layout_columnWeight="1"
                android:id="@+id/btnArchiveFilterChannerCinefox"
                android:drawableTop="@drawable/cinefox"
                android:text="@string/archiveFilterChannerCinefox"
                android:layout_row="0"
                android:layout_column="1"
                />
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:layout_columnWeight="1"
                android:layout_gravity="center_vertical"
                android:id="@+id/btnArchiveFilterChannerGooglePlay"
                android:drawableTop="@drawable/google_play"
                android:text="@string/archiveFilterChannerGooglePlay"
                android:layout_row="0"
                android:layout_column="2"
                />
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:layout_columnWeight="1"
                android:text="@string/archiveFilterChannerNetflix"
                android:id="@+id/btnArchiveFilterChannerNetflix"
                android:drawableTop="@drawable/netflix"
                android:layout_row="0"
                android:layout_column="3"
                />
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:layout_columnWeight="1"
                android:id="@+id/btnArchiveFilterChannerWatcha"
                android:text="@string/archiveFilterChannerWatcha"
                android:drawableTop="@drawable/watcha"
                android:layout_row="0"
                android:layout_column="4"
                />
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:layout_columnWeight="1"
                android:id="@+id/btnArchiveFilterChannerIndieFlug"
                android:text="@string/archiveFilterChannerIndieFlug"
                android:drawableTop="@drawable/indiplug"
                android:layout_row="0"
                android:layout_column="5"
                />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/yes24"
                android:background="#00000000"
                android:layout_columnWeight="1"
                android:id="@+id/btnArchiveFilterChannerYES24"
                android:text="@string/archiveFilterChannerYES24"
                android:layout_row="1"
                android:layout_column="0"
                />
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:layout_columnWeight="1"
                android:drawableTop="@drawable/seechu"
                android:id="@+id/btnArchiveFilterChannerSeechu"
                android:text="@string/archiveFilterChannerSeechu"
                android:layout_row="1"
                android:layout_column="1"
                />


    </GridLayout>
</LinearLayout>