<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="장르"
        android:textSize="@dimen/profileValueH3"
        android:textStyle="bold"

        />
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        >
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genreDrama"
                android:layout_weight="1"
                />
            <com.gc.materialdesign.views.ProgressBarDeterminate
                android:layout_gravity="center_vertical"
                android:id="@+id/progressDrama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#5F00FF"
                android:layout_weight="5"
                android:backgroundTint="#00000000"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genreAcion"
                android:layout_weight="1"
                />
            <com.gc.materialdesign.views.ProgressBarDeterminate
                android:layout_gravity="center_vertical"
                android:id="@+id/progressAction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#5F00FF"
                android:layout_weight="5"
                android:backgroundTint="#00000000"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genreSF"
                android:layout_weight="1"
                />
            <com.gc.materialdesign.views.ProgressBarDeterminate
                android:layout_gravity="center_vertical"
                android:id="@+id/progressSF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#5F00FF"
                android:layout_weight="5"
                android:backgroundTint="#00000000"
                />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genreMelo"
                android:layout_weight="1"
                />
            <com.gc.materialdesign.views.ProgressBarDeterminate
                android:layout_gravity="center_vertical"
                android:id="@+id/progressMelo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#5F00FF"
                android:layout_weight="5"
                android:backgroundTint="#00000000"
                />
        </TableRow>
        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/genreMusical" />
            <com.gc.materialdesign.views.ProgressBarDeterminate
                android:layout_gravity="center_vertical"
                android:id="@+id/progressMusical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#5F00FF"
                android:layout_weight="5"
                android:backgroundTint="#00000000"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genreMusic"
                android:layout_weight="1"
                />
            <com.gc.materialdesign.views.ProgressBarDeterminate
                android:layout_gravity="center_vertical"
                android:id="@+id/progressMusic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#5F00FF"
                android:layout_weight="5"
                android:backgroundTint="#00000000"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genreAdventure"
                android:layout_weight="1"
                />
            <com.gc.materialdesign.views.ProgressBarDeterminate
                android:layout_gravity="center_vertical"
                android:id="@+id/progressAdventure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#5F00FF"
                android:backgroundTint="#00000000"
                android:layout_weight="5"
                />
        </TableRow>
    </TableLayout>

</LinearLayout>