<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="50dp"
    android:id="@+id/loginActivityLayout"
    >
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        >
        <TableRow
            android:layout_marginBottom="20dp"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/titleimage"
                android:gravity="center"
                android:layout_weight="1"

                />
        </TableRow>
        <TableRow
            android:layout_marginBottom="13dp">
            <com.beardedhen.androidbootstrap.BootstrapEditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/colorSearch"
                android:hint="@string/idEditTextHint"
                android:singleLine="true"
                app:bootstrapBrand="primary"
                app:bootstrapSize="md"
                app:roundedCorners="true"
                android:id="@+id/loginEdtID"
                />
        </TableRow>
        <TableRow>
            <com.beardedhen.androidbootstrap.BootstrapEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/colorSearch"
                android:hint="@string/passwordEditTextHint"
                android:singleLine="true"
                android:inputType="textPassword"
                app:bootstrapBrand="primary"
                app:bootstrapSize="md"
                app:roundedCorners="true"
                android:id="@+id/loginEdtPwd"
                />
        </TableRow>

        <TableRow
            android:layout_marginTop="10dp"
            >
            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/loginActivityLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/loginButtonText"
                app:bootstrapBrand="primary"
                app:bootstrapSize="md"
                app:buttonMode="regular"
                app:roundedCorners="true"
                />
        </TableRow>

        <TableRow
            android:layout_marginTop="15dp"
            android:paddingHorizontal="50dp"
            android:gravity="center"
            >
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00aa0000"
                android:text="@string/forgotPassword"
                />
        </TableRow>
        <TableRow
            android:layout_marginTop="15dp"
            android:paddingHorizontal="50dp"
            android:layout_gravity="center"
            android:gravity="center"
            >
            <com.beardedhen.androidbootstrap.BootstrapButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SignUpButtonText"
                android:id="@+id/loginActivitySignUp"
                android:layout_gravity="center"
                app:buttonMode="regular"
                app:bootstrapSize="md"
                app:bootstrapBrand="primary"
                app:roundedCorners="true"
                app:showOutline="true"
                />
    </TableRow>
    </TableLayout>


</LinearLayout>