<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="4"
    android:rowCount="1"
    >
    <LinearLayout
        style="@style/ReStyleNaviHearderGridItem"
        android:id="@+id/naviHearderMovieLayout"
        >
        <com.beardedhen.androidbootstrap.AwesomeTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:text="@string/naviHearderMovie"
            android:textSize="@dimen/naviHeaderValueH3"
            app:bootstrapBrand="secondary"
            />
        <com.beardedhen.androidbootstrap.AwesomeTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="-1"
            android:textSize="@dimen/naviHeaderValueH3"
            android:id="@+id/naviHearderMovieValue"
            app:bootstrapBrand="secondary"
            />
    </LinearLayout>
    <LinearLayout
        style="@style/ReStyleNaviHearderGridItem"
        android:id="@+id/naviHearderReviewLayout"
        >
        <com.beardedhen.androidbootstrap.AwesomeTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/naviHearderReview"
            android:textSize="@dimen/naviHeaderValueH3"
            android:paddingBottom="8dp"
            app:bootstrapBrand="secondary"
            />
        <com.beardedhen.androidbootstrap.AwesomeTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="-1"
            android:textSize="@dimen/naviHeaderValueH3"
            android:id="@+id/naviHearderReviewValue"
            app:bootstrapBrand="secondary"
            />
    </LinearLayout>
    <LinearLayout
        style="@style/ReStyleNaviHearderGridItem"
        android:id="@+id/naviHearderFollowingLayout"
        >
        <com.beardedhen.androidbootstrap.AwesomeTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/naviHearderFollowing"
            android:textSize="@dimen/naviHeaderValueH3"
            android:paddingBottom="8dp"
            app:bootstrapBrand="secondary"
            />
        <com.beardedhen.androidbootstrap.AwesomeTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="-1"
            android:textSize="@dimen/naviHeaderValueH3"
            android:id="@+id/naviHearderFollowingValue"
            app:bootstrapBrand="secondary"
            />
    </LinearLayout>
    <LinearLayout
        style="@style/ReStyleNaviHearderGridItem"
        android:id="@+id/naviHearderFllowerLayout"
        >
        <com.beardedhen.androidbootstrap.AwesomeTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/naviHearderFollower"
            android:textSize="@dimen/naviHeaderValueH3"
            android:paddingBottom="8dp"
            app:bootstrapBrand="secondary"
            />
        <com.beardedhen.androidbootstrap.AwesomeTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="-1"
            android:textSize="@dimen/naviHeaderValueH3"
            android:id="@+id/naviHearderFollowerValue"
            app:bootstrapBrand="secondary"
            />
    </LinearLayout>
</GridLayout>